<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.iastate.tlavan.bonappetit.CreateRecipe">

    <EditText
        android:id="@+id/ingred5"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ingredient5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ingred4" />

    <EditText
        android:id="@+id/ingred4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ingredient4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ingred3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/CR_Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/LogOut"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:text="@string/Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/Add_Recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/addButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/PreMade"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/premadeButton"
        android:onClick="onClick (CreateRecipe)"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recipeRate"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Recipe_Name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipeRate"
        android:numStars="5"
        android:rating="0"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/uploadOnlineSwitch" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="@string/Ingredient2"
        android:ems="10"
        android:id="@+id/ingred2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ingred1" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="@string/Ingredient1"
        android:ems="10"
        android:id="@+id/ingred1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="@string/Ingredient3"
        android:ems="10"
        android:id="@+id/ingred3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ingred2" />

    <Switch
        android:id="@+id/uploadOnlineSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/Local_Online"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="199dp"
        android:layout_height="272dp"
        android:layout_below="@+id/recipeName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="79dp"
        tools:layout_editor_absoluteY="144dp" />


</android.support.constraint.ConstraintLayout>
