<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.iastate.tlavan.bonappetit.ViewRecipe">

    <!-- Text for user to enter recipe they would like to view -->
    <EditText
        android:id="@+id/findRecipe"
        android:layout_width="315dp"
        android:layout_height="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/EnterRecipeName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-23dp"
        tools:layout_editor_absoluteY="9dp" />

    <!-- Button to view all recipes -->
    <Button
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/ViewAllRecipe"
        android:id="@+id/buttonGetAllRecipes"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.657" />

    <!-- Button to view a specific recipe by name -->
    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/ViewRecipeByName"
        android:id="@+id/buttonGetOneRecipe"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.342" />

    <!-- Button to navigate to main screen -->
    <Button
        android:text="@string/Home"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/vr_Home"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Button to log out (goes to login screen) -->
    <Button
        android:id="@+id/vr_LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/LogOut"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ListView
        android:id="@+id/listRecipes"
        android:layout_width="370dp"
        android:layout_height="357dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="67dp"
        app:layout_constraintHorizontal_bias="0.272"
        tools:layout_editor_absoluteY="67dp" />

</android.support.constraint.ConstraintLayout>
